rook/ceph/cluster.yml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
