rook/ceph/service-objectstore-dev.yml
apiVersion: v1
kind: Service
metadata:
  name: rook-ceph-rgw-s3
  namespace: rook-ceph
  labels:
    app: rook-ceph-rgw
    rook_cluster: rook-ceph
    rook_object_store: s3-storage
spec:
  ports:
  - name: rgw
    port: 80
  selector:
    app: rook-ceph-rgw
    rook_cluster: rook-ceph
    rook_object_store: s3-storage
  sessionAffinity: None
