rook/ceph/ingress-dev.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ceph-ingress
  namespace: rook-ceph
  annotations:
    nginx.org/redirect-to-https: True
spec:
  tls:
  - hosts:
    - ceph.example.com
    secretName: tls-ceph
  rules:
  - host: ceph.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: rook-ceph-mgr-dashboard
          servicePort: 7000
