rook/ceph/ingress-prod.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ceph-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-issuer"
spec:
  tls:
  - hosts:
    - ceph.example.com
    secretName: ceph.example.com-tls
  rules:
  - host: ceph.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: rook-ceph-mgr-dashboard
          servicePort: 7000
